# Mystic-Game-Engine

./: CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt
Engine/Include/Core/Concepts/: all_of.h  any_of.h
Engine/Include/Core/Macros/: ArchitectureDetection.h  CompilerDetection.h  Forceinline.h  OSDetection.h  Stringify.h  TokenPaste.h  Version.h  VersionCompare.h
Engine/Include/Core/Math/: Sqrt.h  Vector2.h
Engine/Include/Core/Memory/: buffer.h  byte.h  fmalloc.h  linear_allocator.h
Engine/Include/Core/Traits/: enable_if.h  is_integral.h
Engine/Include/Core/Types/: standard_types.h
Engine/Tools/: mge_config.cmake  mge_engine_includes.cmake  mge_iwyu.cmake
Licenses/: License.glslang
